Fixed problem where scrollbar was not interactable

--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -16,13 +16,17 @@ body {
   height: 100vh;
 }
 
+body {
+  overflow-y: visible!important;
+}
+
 a {
   color: inherit;
   text-decoration: none;
 }
 
 .tl-edges {
-  overflow-x: hidden;
+  overflow-x: visible!important;
   //@while condition {
 }
 
